--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,38 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.alphamax.covifight">
 
+    <!--Internet Permission-->
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <!--Bluetooth Permission-->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
+    <!--Location Permission-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+
+    <!--SMS Permission-->
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
+    <!--Storage Permission-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!--Foreground Service-->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <!--WakeLock Permission-->
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:allowBackup="true"
         android:exported="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/shield"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/shield"
         android:theme="@style/AppTheme">
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -18,6 +41,7 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBzExeotiaYuL41UbB04Zvx3nzQiyxjtrs"/>
+
         <activity
             android:name=".UI.activity.NavigationActivity"
             android:screenOrientation="portrait" />
@@ -42,5 +66,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".service.OreoService"
+            />
     </application>
 </manifest>
